client/src/pages/Upload/Upload.css
.upload-container {
    background-image: url("./images/blackboard.jpg");
    background: cover; 
    width: 100%;
    height: 960px;
}

.uploadArea {
    color: white; 
    padding-top: 25%;
    text-align: center; 
} 

h1 {
    padding-bottom: 20px; 
}

.file-progress {
    padding-top: 20px; 
}

.receipt-drop {
    position: relative;
    left: 41%;
}

.inputForm {
    display: block;
    color: #db6f68;
    margin-top: 5%; 
    text-align: center; 
}

.input-group {
    position: relative;
    margin-left: 42%; 

}

.submit-status {
    color: white;
    position: relative;
    margin-top: 60%; 
}

.preview-h2 {
    text-align: center; 
    position: relative;
    right: 41%;
}

img {
    position: relative; 
    right: 41%; 
}

.input-container {
    background-image: url("./images/blackboard.jpg");
    background: cover; 
    width: 100%;
    height: 920px;
    margin-top: -5%;
}

.inputForm {
    padding-top: 10%;
}

input {
    border: 3px solid #db6f68;
    background: none; 
    margin-left: 5px;
    margin-right: 5px; 
    color: white; 
}

select {
    border: 3px solid #db6f68;
    background: none; 
    margin-left: 5px;
    margin-right: 5px; 
    color: white; 
    border-radius: 2%;
    height: 31px; 
}

h3 {
    color: white; 
}

.submit-error {
    position: relative;
    color: white;
    margin-top: 36%;  
}

.success-modal-content {
    text-align: center;  
}

